feat: add attachments and improve roast exploration
